Intro revamp and native references
Introduction / analysis revamped and reduced.
Reimplemented native reference.
Further improvements to by-reference section.